--- a/client/main/main.html
+++ b/client/main/main.html
@@ -5,5 +5,5 @@
     </p>
     
     <hr />
-    <p>Copyright &copy; Todos, 2014-2015.</p>
+    <p>Copyright &copy; Softhouse Göteborg, Alicante 2015</p>
 </template>
