fixed routing for the map-html and added needed package for google  maps api

--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -4,9 +4,10 @@
     		<li class="active">
     			<a href="{{pathFor route='home'}}">Home</a>
     		</li>
-    		<!--<li><a href="{{pathFor route='todolist'}}">Todolist</a>
+    		<li><a href="{{pathFor route='map'}}">Map</a>
     			
     		</li>
+            <!--
     		<li><a href="{{pathFor route='about'}}">About</a>
     			
     		</li>
