added code to the map view

--- a/client/map/map.html
+++ b/client/map/map.html
@@ -1,4 +1,13 @@
 <template name="map">
+
+
+
 	<h3>THIS IS GOOGLE MAPS</h3>
 	Map page
+
+  <div class="map-container">
+    {{> googleMap name="exampleMap" options=exampleMapOptions}}
+  </div>
+
+	
 </template>
