--- a/site.html
+++ b/site.html
@@ -1,17 +1,10 @@
 
 
 	<head>
-	  <title>Todo</title>
+	  <title>gpsSecurityTracker</title>
 	  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	</head>
 
 	<body style="padding: 1%">
 	  
 	</body>
-
-	
-  	
-  	
-  	
-
-
