Added register user functionality.

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,4 +1,12 @@
 <template name="home">
-	<h3>Home</h3>
-	default page
+    <h3>Register participant</h3>
+    <div class="row">
+        <div class="col-md-2">
+            <input class="form-control" type="text" id="participantName" />
+        </div>
+    </div>
+
+    <p>
+        <button class="btn" id="add">Add</button>
+    </p>
 </template>
