--- a/client/main/main.html
+++ b/client/main/main.html
@@ -1,8 +1,12 @@
 <template name="main">
-    {{ > menu }}
+    {{> menu }}
     <p style="padding: 2%">
     	{{> yield}}	
     </p>
+
+    <div>
+        {{> home}}
+    </div>
     
     <hr />
     <p>Copyright &copy; Softhouse Göteborg, Alicante 2015</p>
