--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -3,7 +3,10 @@
     	<ul>
     		<li class="active">
     			<a href="{{pathFor route='home'}}">Home</a>
-    		</li>
+            </li>
+            <li>
+                <a href="{{pathFor route='alarm'}}">Alarm</a>
+            </li>
     		<li>
                 <a href="{{pathFor route='map'}}">Map</a>
     		</li>
