--- a/client/alarm/alarm.html
+++ b/client/alarm/alarm.html
@@ -1,5 +1,5 @@
 <template name="alarm">
     <p>
-        <button class="btn" id="btnAlarm">ALARM</button>
+        <button class="btn btnAlarm" id="btnAlarm">ALARM</button>
     </p>
 </template>
